# Fsoft2024_1DA_2

./: .gitignore  README.md  main.cpp
Headers/: Teste.h
Headers/Controllers/: Controller.h
Headers/Exceptions/: DuplicatedDataException.h  InvalidDataException.h
Headers/Model/: Accounts.h  AccountsContainers.h  ClientsContainer.h  Loans.h  Transactions.h
Headers/Views/: AccountView.h  AcquireView.h  ClientView.h  InsuranceView.h  TransactionsView.h  aasd.h
Mock/: MockData.h  sad.h
Sources/: asdas.h
Sources/Controllers/: Controller.cpp  s.h
Sources/Exceptions/: Data ConsistencyException.cpp  DataConsistencyExceprion.cpp  DuplicateDataException.cpp  InvalidDataExcption.cpp
Sources/Model/: Loans.cpp
Wallet_Management/: main.cpp  main_teste.cpp  main_teste.h
Wallet_Management/Headers/Controllers/: Controller.h
Wallet_Management/Headers/Exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h
Wallet_Management/Headers/Model/: Accounts.h  AccountsContainers.h  Acquire.h  Client.h  ClientsContainer.h  Data.h  Date.h  Insurance.h  InsuranceContainer.h  Loans.h  LoansContainers.h  Transactions.h  TransactionsContainers.h  WalletManagement.h
Wallet_Management/Mock/: MockData.cpp  MockData.h
Wallet_Management/Test/: a.cpp
Wallet_Management_Saver/: main.cpp
Wallet_Management_Tester/: CMakeLists.txt
Wallet_Management_Tester/googleTestLib/googletest/cmake/: internal_utils.cmake
Wallet_Management_Tester/googleTestLib/googletest/test/: googletest-throw-on-failure-test.py  gtest_help_test.py
(+51 files in other folders)
